Replace footer with a new global footer structure

--- a/carpet-and-upholstery-cleaning.html
+++ b/carpet-and-upholstery-cleaning.html
@@ -383,24 +383,53 @@
 
   </main>
 
-  <!-- 12) Footer - Compact with minimal spacing -->
-  <footer class="site-footer" style="background: var(--card); color: var(--ink); padding: 12px 20px; text-align: center; border-top: 3px solid var(--blue); font-size: 0.95rem;">
-    <!-- Line 1: Business NAP -->
-    <p style="margin: 0 0 3px 0; line-height: 1.4;">
-      <strong>NeatNest LLC</strong> • 274 Woodhouse Ave, Wallingford, CT 06492 • 
-      <a href="tel:+12035007034" style="color: var(--blue); text-decoration: none; font-weight: 600;">(203) 500-7034</a> • 
-      <a href="mailto:info@neatnestllc.com" style="color: var(--blue); text-decoration: none;">info@neatnestllc.com</a>
-    </p>
-    
-    <!-- Line 2: Proudly Serving with Town Links -->
-    <p style="margin: 0; line-height: 1.4;">
-      Proudly Serving: 
-      <a href="wallingford-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
-      <a href="north-haven-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
-      <a href="cheshire-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
-      © <span id="year"></span> • 
-      <a href="/" style="color: var(--blue); text-decoration: none;">HOME</a>
-    </p>
+  <!-- Global Footer -->
+  <footer class="site-footer">
+    <div class="footer-columns">
+      
+      <!-- Services Column -->
+      <div class="footer-col">
+        <h3>Cleaning Services</h3>
+        <ul>
+          <li><a href="deep-house-cleaning.html">Deep House Cleaning</a></li>
+          <li><a href="recurring-house-cleaning.html">Recurring House Cleaning</a></li>
+          <li><a href="move-in-move-out-cleaning.html">Move-In / Move-Out Cleaning</a></li>
+          <li><a href="office-cleaning.html">Office Cleaning</a></li>
+          <li><a href="carpet-and-upholstery-cleaning.html">Carpet & Upholstery Cleaning</a></li>
+        </ul>
+      </div>
+
+      <!-- Service Areas Column -->
+      <div class="footer-col">
+        <h3>Service Areas</h3>
+        <ul>
+          <li><a href="wallingford-ct-house-cleaning.html">Wallingford, CT</a></li>
+          <li><a href="north-haven-ct-house-cleaning.html">North Haven, CT</a></li>
+          <li><a href="cheshire-ct-house-cleaning.html">Cheshire, CT</a></li>
+        </ul>
+      </div>
+
+      <!-- Company Column -->
+      <div class="footer-col">
+        <h3>Company</h3>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About NeatNest</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <p class="footer-contact">
+          <strong>NeatNest LLC</strong><br>
+          Wallingford, CT<br>
+          <a href="tel:+12035007034">(203) 500-7034</a><br>
+          <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a>
+        </p>
+      </div>
+
+    </div>
+
+    <div class="footer-bottom">
+      © <span id="year"></span> NeatNest LLC • Serving Wallingford, North Haven & Cheshire, CT
+    </div>
   </footer>
 
   <script>
