--- a/contact.html
+++ b/contact.html
@@ -220,6 +220,7 @@
         <h3>Company</h3>
         <ul>
           <li><a href="/">Home</a></li>
+          <li><a href="/about">About NeatNest</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="footer-contact">
