Add company description to the Trust Section
Added a paragraph about NeatNest LLC's services and team.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
     <section class="section" style="background: #f8fafc;">
       <h2>Why Choose NeatNest LLC</h2>
       
+      <p>
+        NeatNest LLC is a family-owned cleaning company proudly serving Wallingford and surrounding towns. 
+        <a href="/about">Learn more about our team and what makes us different.</a>
+      </p>
+      
       <div class="trust-badges">
         <div class="trust-badge">
           <img src="images/badge-insured.png" alt="Insured icon">
