Add team introduction link to contact page

--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,11 @@
         <p><a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a></p>
         <p><strong>Business Hours:</strong><br>Monday–Sunday: 7:00 AM – 8:00 PM</p>
         <p class="reassurance">We respond quickly to all inquiries.</p>
+
+        <p style="margin: 10px 0 0;">
+          Want to know who you’ll be working with?
+          <a href="/about" style="color: var(--blue); font-weight: 600; text-decoration: none;">Meet our team.</a>
+        </p>
       </div>
     </section>
 
