--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -104,7 +104,11 @@
 
     <!-- 3) Short Geo Reinforcement -->
     <section class="section" style="background: #f8fafc; padding: 15px 20px;">
-      <p style="margin: 0;">We provide deep house cleaning services throughout Wallingford, North Haven, and Cheshire CT. As a locally owned company based in Wallingford, we offer reliable scheduling and consistent service across all three towns.</p>
+      <p style="margin: 0;">
+        We provide deep house cleaning services throughout Wallingford, North Haven, and Cheshire CT. As a locally owned company based in Wallingford, we offer reliable scheduling and consistent service across all three towns — 
+        <a href="/about" style="color: var(--blue); font-weight: 600; text-decoration: none;">meet our team.</a>
+      </p>
+
     </section>
 
     <!-- 4) What's Included (detailed scope with grouped lists) -->
