--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -106,7 +106,7 @@
     <section class="section" style="background: #f8fafc; padding: 15px 20px;">
       <p style="margin: 0;">
         We provide deep house cleaning services throughout Wallingford, North Haven, and Cheshire CT. As a locally owned company based in Wallingford, we offer reliable scheduling and consistent service across all three towns — 
-        <a href="/about" style="color: var(--blue); font-weight: 600; text-decoration: none;">meet our team.</a>
+        <a href="/about">meet our team.</a>
       </p>
 
     </section>
