Update Open Graph URL and Facebook link

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="About NeatNest LLC - Family-Owned Cleaning Company in Wallingford CT" />
   <meta property="og:description" content="Meet the family behind NeatNest LLC. Trusted local cleaning company serving Wallingford and surrounding CT towns since 2022." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/about.html" />
+  <meta property="og:url" content="https://neatnestllc.com/about" />
   <meta property="og:type" content="website" />
   
   <title>About NeatNest LLC - Family-Owned Cleaning Company in Wallingford CT</title>
@@ -67,7 +67,7 @@
   <!-- Header / Hero -->
   <header class="site-header">
     <div class="social-links">
-      <a href="https://www.facebook.com/neatneatct" target="_blank" aria-label="Facebook">
+      <a href="https://www.facebook.com/neatnestct" target="_blank" aria-label="Facebook">
         <img src="images/facebook.svg" alt="Facebook logo" />
       </a>
       <a href="https://www.instagram.com/neatnestct" target="_blank" aria-label="Instagram">
