Update og:url meta tag for cleaning page

--- a/carpet-and-upholstery-cleaning.html
+++ b/carpet-and-upholstery-cleaning.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Carpet & Upholstery Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC" />
   <meta property="og:description" content="Professional carpet and upholstery cleaning that removes stains, odors, and allergens. Family-owned, fully insured and bonded." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/carpet-upholstery.html" />
+  <meta property="og:url" content="https://neatnestllc.com/carpet-and-upholstery-cleaning" />
   <meta property="og:type" content="website" />
   
   <title>Carpet & Upholstery Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC</title>
