Update Open Graph URL for house cleaning page

--- a/cheshire-ct-house-cleaning.html
+++ b/cheshire-ct-house-cleaning.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="House Cleaning Services in Cheshire, CT | NeatNest LLC" />
   <meta property="og:description" content="Trusted local house cleaning service in Cheshire, CT. Professional, insured, and family-owned." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/cheshire-ct-house-cleaning.html" />
+  <meta property="og:url" content="https://neatnestllc.com/cheshire-ct-house-cleaning" />
   <meta property="og:type" content="website" />
   
   <title>House Cleaning Services in Cheshire, CT | NeatNest LLC</title>
