Update Open Graph URL meta tag for contact page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Contact NeatNest LLC | House Cleaning in Wallingford, North Haven & Cheshire CT" />
   <meta property="og:description" content="Contact NeatNest LLC for professional house cleaning services in Wallingford, North Haven, and Cheshire, CT. Call or request a free quote today." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/contact.html" />
+  <meta property="og:url" content="https://neatnestllc.com/contact" />
   <meta property="og:type" content="website" />
   
   <title>Contact NeatNest LLC | House Cleaning in Wallingford, North Haven & Cheshire CT</title>
