Update Open Graph URL for deep house cleaning page

--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Deep House Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC" />
   <meta property="og:description" content="Professional top-to-bottom deep cleaning for homes that need extra attention. Family-owned, fully insured and bonded." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/deep-house-cleaning.html" />
+  <meta property="og:url" content="https://neatnestllc.com/deep-house-cleaning" />
   <meta property="og:type" content="website" />
   
   <title>Deep House Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC</title>
