Update Open Graph URL for cleaning service page

--- a/move-in-move-out-cleaning.html
+++ b/move-in-move-out-cleaning.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Move-In/Move-Out Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC" />
   <meta property="og:description" content="Professional move-in and move-out cleaning for stress-free transitions. Family-owned, fully insured and bonded." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/move-in-out.html" />
+  <meta property="og:url" content="https://neatnestllc.com/move-in-move-out-cleaning" />
   <meta property="og:type" content="website" />
   
   <title>Move-In/Move-Out Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC</title>
