Update Open Graph URL for office cleaning page

--- a/office-cleaning.html
+++ b/office-cleaning.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Office & Commercial Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC" />
   <meta property="og:description" content="Professional office and commercial cleaning for businesses. Flexible scheduling, reliable service. Family-owned, fully insured and bonded." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/office-cleaning.html" />
+  <meta property="og:url" content="https://neatnestllc.com/office-cleaning" />
   <meta property="og:type" content="website" />
   
   <title>Office & Commercial Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC</title>
