Update Open Graph URL for house cleaning page

--- a/recurring-house-cleaning.html
+++ b/recurring-house-cleaning.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Recurring House Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC" />
   <meta property="og:description" content="Professional recurring house cleaning service. Weekly, bi-weekly, or monthly visits. Family-owned, fully insured and bonded." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
-  <meta property="og:url" content="https://neatnestllc.com/recurring-cleaning.html" />
+  <meta property="og:url" content="https://neatnestllc.com/recurring-house-cleaning" />
   <meta property="og:type" content="website" />
   
   <title>Recurring House Cleaning in Wallingford, North Haven & Cheshire CT | NeatNest LLC</title>
