Revise house cleaning service details and FAQs
Updated content to enhance service descriptions and local focus.

--- a/cheshire-ct-house-cleaning.html
+++ b/cheshire-ct-house-cleaning.html
@@ -116,7 +116,7 @@
     <h1>House Cleaning Services in Cheshire, CT</h1>
     
     <!-- Subline -->
-    <p>Professional, insured house cleaning for Cheshire homeowners.</p>
+    <p>Professional and detail-oriented house cleaning services in Cheshire, CT. NeatNest LLC provides deep cleaning, recurring housekeeping, and move-in/move-out cleaning for Cheshire homeowners.</p>
     
     <!-- Primary & Secondary CTAs -->
     <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 10px;">
@@ -153,22 +153,22 @@
     <!-- 2) Intro (Location-Focused) -->
     <section class="section">
       <h2>Your Trusted Cleaning Service in Cheshire</h2>
-      <p>NeatNest LLC is a family-owned cleaning company based in Wallingford, CT, proudly serving homeowners throughout Cheshire. We understand what local homeowners need—reliable, detail-oriented service from people you can trust in your home.</p>
-      <p>Our team brings professional cleaning equipment, eco-friendly products, and a commitment to excellence to every job. Whether you need a one-time deep clean or recurring service, we're here to help Cheshire residents maintain beautiful, healthy homes.</p>
-      <p>We're fully insured and bonded for your peace of mind, and we pride ourselves on responsive communication and flexible scheduling to fit your busy life.</p>
+      <p>Cheshire homeowners choose NeatNest LLC for dependable, high-quality house cleaning services. We understand that Cheshire residents expect attention to detail, reliability, and professionalism — and that’s exactly what we deliver.</p>
+      <p>Whether you’re preparing your home for guests, managing a busy family schedule, or moving in or out of the area, our cleaning team provides customized service designed around your needs.</p>
+      <p>We focus on consistency, communication, and long-term client relationships.</p>
     </section>
 
     <!-- 3) Why Cheshire Homeowners Choose Us -->
     <section class="section">
       <h2>Why Cheshire Homeowners Choose NeatNest LLC</h2>
       <ul style="text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.9; font-size: 1.1rem;">
-        <li><strong>Locally Based Team:</strong> We're right here in the area, serving your community.</li>
-        <li><strong>Flexible Scheduling:</strong> We work around your schedule, including evenings and weekends.</li>
-        <li><strong>Trusted by Families:</strong> Background-checked, professional cleaners you can trust.</li>
-        <li><strong>Consistent Cleaners:</strong> Same team each visit means they know your home and preferences.</li>
-        <li><strong>Fully Insured & Bonded:</strong> Your home and belongings are protected with every visit.</li>
-        <li><strong>Eco-Friendly Products:</strong> Safe for your family, pets, and the environment.</li>
-        <li><strong>Satisfaction Guaranteed:</strong> We're not happy unless you're thrilled with the results.</li>
+        <li><strong>Locally Based Team:</strong> Fully insured & bonded cleaning company</li>
+        <li><strong>Flexible Scheduling:</strong> Family-owned & operated</li>
+        <li><strong>Trusted by Families:</strong> Personalized service and communication</li>
+        <li><strong>Consistent Cleaners:</strong> Flexible recurring cleaning options</li>
+        <li><strong>Fully Insured & Bonded:</strong> Thorough deep cleaning services</li>
+        <li><strong>Eco-Friendly Products:</strong> Professional equipment provided</li>
+        <li><strong>Satisfaction Guaranteed:</strong> Trusted by local homeowners</li>
       </ul>
     </section>
 
@@ -262,19 +262,20 @@
       </div>
 
       <!-- Natural paragraph mentioning neighborhoods + landmarks -->
-      <p style="max-width: 800px; margin: 25px auto 20px; line-height: 1.7;">Here's some of our recent work around Cheshire Center and the West Side area. We're always happy to see the beautiful Cheshire Town Green on our way to visit our clients, and we love serving homes near the historic Barker Character, Comic and Cartoon Museum. Whether you're in the heart of Cheshire Center or over by Mixville, we know the area well and can be at your door quickly.</p>
-
+      <p style="max-width: 800px; margin: 25px auto 20px; line-height: 1.7;">
+        We provide professional house cleaning services throughout Cheshire, including homes near Cheshire Center, residential neighborhoods along Route 10, and communities near I-691. Whether you're in South Cheshire or closer to the Wallingford border, our team delivers reliable, detail-focused cleaning services tailored to your home.
+      </p>
       <!-- Neighborhood list (keeps SEO value) -->
       <p style="margin-top: 30px;"><strong>Areas we serve throughout Cheshire:</strong></p>
       <ul style="text-align: left; max-width: 700px; margin: 15px auto; line-height: 1.9; columns: 2; column-gap: 40px;">
         <li>Cheshire Center</li>
-        <li>Mixville</li>
-        <li>West Side</li>
-        <li>East Side</li>
-        <li>Near Cheshire Town Green</li>
-        <li>Near Cheshire Academy</li>
-        <li>06410 area</li>
-        <li>All surrounding areas</li>
+        <li>South Cheshire</li>
+        <li>Neighborhoods off Route 10</li>
+        <li>Highland Avenue area</li>
+        <li>Homes near I-691 corridor</li>
+        <li>West Cheshire neighborhoods</li>
+        <li>Wallingford border area</li>
+        <li>06410</li>
       </ul>
     </section>
 
@@ -307,30 +308,30 @@
         <!-- FAQ 1 - EXPANDED by default -->
         <div class="faq-item">
           <div class="faq-question active" onclick="toggleFAQ(this)">
-            How much does house cleaning cost in Cheshire CT?
+            Do you offer move-in/move-out cleaning in Cheshire?
           </div>
           <div class="faq-answer active">
-            <p>House cleaning costs in Cheshire vary based on home size, service type, and condition. Most homes range from $150–$400 for standard cleaning and $250–$600 for deep cleaning. We offer free, no-obligation quotes so you know exactly what to expect.</p>
+            <p>Yes. We provide thorough cleaning services for buyers, sellers, landlords, and tenants.</p>
           </div>
         </div>
 
         <!-- FAQ 2 - Collapsed -->
         <div class="faq-item">
           <div class="faq-question" onclick="toggleFAQ(this)">
-            Do you offer weekly cleaning in Cheshire?
+            Are supplies included?
           </div>
           <div class="faq-answer">
-            <p>Yes! We offer flexible recurring cleaning schedules for Cheshire homeowners including weekly, bi-weekly, and monthly service. Recurring clients receive priority scheduling and discounted rates.</p>
+            <p>Yes. Our team brings all professional cleaning supplies and equipment.</p>
           </div>
         </div>
 
         <!-- FAQ 3 - Collapsed -->
         <div class="faq-item">
           <div class="faq-question" onclick="toggleFAQ(this)">
-            Are you based locally in Cheshire?
+            Is NeatNest LLC insured?
           </div>
           <div class="faq-answer">
-            <p>Yes! NeatNest LLC is based in Wallingford, CT, just minutes from Cheshire. Our local base means faster response times, flexible scheduling, and familiarity with homes throughout the area.</p>
+            <p>Yes. We are fully insured and bonded for your peace of mind.</p>
           </div>
         </div>
 
@@ -347,10 +348,10 @@
         <!-- FAQ 5 - Collapsed -->
         <div class="faq-item">
           <div class="faq-question" onclick="toggleFAQ(this)">
-            What areas of Cheshire do you serve?
+            Can I request the same cleaning team each visit?
           </div>
           <div class="faq-answer">
-            <p>We serve all of Cheshire, including Cheshire Center, Mixville, West Side, East Side, and everywhere in between. If you're in the 06410 area, we've got you covered!</p>
+            <p> Always! We aim to send the same team so they become familiar with your home and preferences.</p>
           </div>
         </div>
 
