--- a/recurring-house-cleaning.html
+++ b/recurring-house-cleaning.html
@@ -84,7 +84,7 @@
     <h1>Recurring House Cleaning in Wallingford, North Haven & Cheshire, CT</h1>
     
     <!-- Supporting line (short) -->
-    <p>Consistent, reliable cleaning service—weekly, bi-weekly, or monthly.</p>
+    <p>Consistent weekly, bi-weekly, or monthly housekeeping service.</p>
     
     <!-- Primary & Secondary CTAs -->
     <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 10px;">
@@ -98,8 +98,8 @@
     <!-- 2) Intro (body starts) -->
     <section class="section">
       <h2>Recurring House Cleaning Service</h2>
-      <p>Life is busy. Between work, family, and everything else, finding time to keep your home consistently clean can feel impossible. Our recurring house cleaning service takes the burden off your shoulders with regular, scheduled visits that keep your home looking its best all year long. Choose weekly, bi-weekly, or monthly service—whatever fits your lifestyle and budget.</p>
-      <p>Unlike one-time cleaning, recurring service builds a relationship. We send the same team to your home each visit, so they learn your preferences, know your space, and provide faster, more personalized service. Recurring clients also enjoy priority scheduling, discounted rates, and the peace of mind that comes with a consistently clean home.</p>
+      <p>Our recurring cleaning service keeps your home consistently clean without the stress of keeping up with it yourself. We focus on maintaining cleanliness after an initial deep cleaning.</p>
+      <p>You choose weekly, bi-weekly, or monthly service based on your needs and lifestyle.</p>
     </section>
 
     <!-- 3) Short Geo Reinforcement -->
@@ -290,10 +290,10 @@
         <!-- FAQ 3 - Collapsed -->
         <div class="faq-item">
           <div class="faq-question" onclick="toggleFAQ(this)">
-            Will I have the same cleaner each time?
+            Do prices change each visit?
           </div>
           <div class="faq-answer">
-            <p>Yes! We assign the same team to your home for every visit. This builds trust, ensures consistency, and allows our team to work more efficiently as they become familiar with your space and preferences.</p>
+            <p>No, pricing remains consistent unless scope changes.</p>
           </div>
         </div>
 
@@ -320,10 +320,10 @@
         <!-- FAQ 6 - Collapsed -->
         <div class="faq-item">
           <div class="faq-question" onclick="toggleFAQ(this)">
-            Do you offer recurring cleaning in North Haven and Cheshire?
+            How often should I schedule service?
           </div>
           <div class="faq-answer">
-            <p>Absolutely! We proudly serve Wallingford, North Haven, and Cheshire CT with the same high-quality recurring house cleaning service. Our team is familiar with homes throughout the area and provides consistent, reliable service across all three towns.</p>
+            <p>Bi-weekly is most common; weekly for busy households or monthly for less busy homes.</p>
           </div>
         </div>
 
