Update description for office cleaning services

--- a/office-cleaning.html
+++ b/office-cleaning.html
@@ -84,7 +84,7 @@
     <h1>Office & Commercial Cleaning in Wallingford, North Haven & Cheshire, CT</h1>
     
     <!-- Supporting line (short) -->
-    <p>Professional cleaning services for offices, retail spaces, and commercial buildings.</p>
+    <p>Reliable commercial cleaning tailored to offices, retail spaces, and local businesses.</p>
     
     <!-- Primary & Secondary CTAs -->
     <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 10px;">
