Replace PNG badges with SVG versions in index.html

--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
     
     <div class="trust-badges">
       <div class="trust-badge">
-        <img src="/images/badge-insured.png" alt="Insured icon">
+        <img src="/images/badge-insured.svg" alt="Insured icon">
         <span>Fully Insured & Bonded</span>
       </div>
       <div class="trust-badge">
-        <img src="/images/badge-family.png" alt="Family owned icon">
+        <img src="/images/badge-family.svg" alt="Family owned icon">
         <span>Family-Owned & Operated</span>
       </div>
       <div class="trust-badge">
-        <img src="/images/badge-star.png" alt="5 star icon">
+        <img src="/images/badge-stars.svg" alt="5 star icon">
         <span>5-Star Rated</span>
       </div>
     </div>
