Update customer testimonials in deep-house-cleaning.html

--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -233,13 +233,13 @@
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
-        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">"NeatNest did an awesome job deep cleaning our condo! They went the extra mile and even removed stains on the walls. Extremely thorough and professional."</p>
+        <p style="font-weight: 600; margin: 0;">— Jonathon C., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!"</p>
-        <p style="font-weight: 600; margin: 0;">— Sarah M., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“NeatNest did an awesome job deep cleaning my house! Everything feels so fresh. Michael was easy to work with, friendly, and professional. Highly recommend!”</p>
+        <p style="font-weight: 600; margin: 0;">— Lynne D., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
       </div>
     </section>
 
