--- a/recurring-house-cleaning.html
+++ b/recurring-house-cleaning.html
@@ -235,18 +235,18 @@
       <h2>What Customers Say</h2>
       
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy."</p>
-        <p style="font-weight: 600; margin: 0;">— Jennifer L., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“My house has never been as clean as it is now that I have hired them. Mike and his crew are personable, honest, detail oriented and very hard working. I highly recommend them!”</p>
+        <p style="font-weight: 600; margin: 0;">— Janis B., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!"</p>
-        <p style="font-weight: 600; margin: 0;">— Sarah M., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“I have never been disappointed! This crew always does a fantastic job cleaning my house. I am always delighted to come home to an immaculate house. Very easy to work with.”</p>
+        <p style="font-weight: 600; margin: 0;">— Kathleen C., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
-        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Mike and his crew have done a great job the last few months. We debated having someone come in, but we’re so glad we did. Very reliable and consistent service.”</p>
+        <p style="font-weight: 600; margin: 0;">— Amy H., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
       </div>
     </section>
 
