Update customer testimonials in cleaning section

--- a/move-in-move-out-cleaning.html
+++ b/move-in-move-out-cleaning.html
@@ -224,18 +224,18 @@
       <h2>What Customers Say</h2>
       
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Mike and his team came and did a garage clean out for my husband and I. They cleaned and organized everything, as well as removing all the junk and garbage that was left over! They are a great local company and I would highly recommend them!"</p>
-        <p style="font-weight: 600; margin: 0;">— Amber T., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Mike and his team did a wonderful job prepping my home to sell. They helped get everything ready and made the house look fantastic.”</p>
+        <p style="font-weight: 600; margin: 0;">— Christopher S., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"I could not be happier with the service from NeatNest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove, floors, fixtures. Everything. You won't be disappointed and won't find a more trustworthy service in your home."</p>
-        <p style="font-weight: 600; margin: 0;">— David T., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Michael and NeatNest did a fantastic job cleaning my condo after we moved out to get it ready to sell. Very professional and thorough.”</p>
+        <p style="font-weight: 600; margin: 0;">— Sheri A., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
-        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Great experience. Mike was very prompt and responsive. His team did a wonderful job cleaning our condo in preparation for a market listing.”</p>
+        <p style="font-weight: 600; margin: 0;">— Alexander N., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
       </div>
     </section>
 
