Update customer testimonials on cleaning service page

--- a/carpet-and-upholstery-cleaning.html
+++ b/carpet-and-upholstery-cleaning.html
@@ -223,18 +223,18 @@
       <h2>What Customers Say</h2>
       
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"I could not be happier with the service from NeatNest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove, floors, fixtures. Everything. You won't be disappointed and won't find a more trustworthy service in your home."</p>
-        <p style="font-weight: 600; margin: 0;">— David T., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Hired Mike for our carpet cleaning. He was punctual and very professional. Took his time and our carpet looks good as new. I would totally recommend NeatNest.”</p>
+        <p style="font-weight: 600; margin: 0;">— Sherry T., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!"</p>
-        <p style="font-weight: 600; margin: 0;">— Sarah M., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“We hired Mike and his team to deep clean the carpets of our new long-term rental. They did a fantastic job.”</p>
+        <p style="font-weight: 600; margin: 0;">— K.M.P., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
-        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Mike and Lucia were personable and professional and did a wonderful job cleaning the carpet of my previous apartment.”</p>
+        <p style="font-weight: 600; margin: 0;">— Emily A., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
       </div>
     </section>
 
