Update customer testimonials in office-cleaning.html

--- a/office-cleaning.html
+++ b/office-cleaning.html
@@ -227,18 +227,18 @@
       <h2>What Customers Say</h2>
       
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy."</p>
-        <p style="font-weight: 600; margin: 0;">— Jennifer L., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Outstanding job, very professional, fair pricing, and great communication throughout the process. Highly recommended.”</p>
+        <p style="font-weight: 600; margin: 0;">— Robert F., <a href="/wallingford-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
-        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Great communication right from the start. Mike runs an ethical, professional business.”</p>
+        <p style="font-weight: 600; margin: 0;">— Christine O., <a href="/cheshire-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!"</p>
-        <p style="font-weight: 600; margin: 0;">— Sarah M., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
+        <p style="font-style: italic; margin-bottom: 10px;">“A wonderful family-owned cleaning business that is affordable and dependable. Michael is fantastic and a great communicator!"</p>
+        <p style="font-weight: 600; margin: 0;">— Alex F., <a href="/north-haven-ct-house-cleaning" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
       </div>
     </section>
 
