Add customer testimonials to Wallingford cleaning page

--- a/wallingford-ct-house-cleaning.html
+++ b/wallingford-ct-house-cleaning.html
@@ -285,18 +285,18 @@
       <h2>What Wallingford Customers Say</h2>
       
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[TESTIMONIAL_QUOTE_1 - Add actual testimonial from a Wallingford customer here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [CUSTOMER_NAME_1], Wallingford CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“We’re so happy with the job they did on my mom’s condo in Wallingford. Everything was spotless, and they were professional, thorough, and kind. Highly recommend!”</p>
+        <p style="font-weight: 600; margin: 0;">— Melanie F., Wallingford CT</p>
       </div>
 
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[TESTIMONIAL_QUOTE_2 - Add actual testimonial from a Wallingford customer here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [CUSTOMER_NAME_2], Wallingford CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“The people at NeatNest were absolutely wonderful. They were incredibly kind, attentive, and personable. The deep cleaning they did in Wallingford was fantastic.”</p>
+        <p style="font-weight: 600; margin: 0;">— Stephanie R., Wallingford CT</p>
       </div>
 
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[TESTIMONIAL_QUOTE_3 - Add actual testimonial from a Wallingford customer here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [CUSTOMER_NAME_3], Wallingford CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Michael and his team cleaned my condo and did an amazing job. I walked in and could smell the cleanliness in the air. Highly recommend.”</p>
+        <p style="font-weight: 600; margin: 0;">— Julie N., Wallingford CT</p>
       </div>
     </section>
 
