Update customer testimonials in HTML file

--- a/cheshire-ct-house-cleaning.html
+++ b/cheshire-ct-house-cleaning.html
@@ -284,18 +284,18 @@
       <h2>What Cheshire Customers Say</h2>
       
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Amazing experience — it was the cleanest it has ever been. Extremely thorough, sweet people, and very reasonable prices. Highly recommend.”</p>
+        <p style="font-weight: 600; margin: 0;">— Katrina E., Cheshire CT</p>
+      </div>
+
+      <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
+        <p style="font-style: italic; margin-bottom: 10px;">“Top notch attention to detail. I’ve tried numerous other cleaning services and no one even comes close.”</p>
         <p style="font-weight: 600; margin: 0;">— Nicki B., Cheshire CT</p>
       </div>
 
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[Add your second Cheshire testimonial here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [Customer Name], Cheshire CT</p>
-      </div>
-
-      <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[Add your third Cheshire testimonial here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [Customer Name], Cheshire CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“NeatNest has totally transformed our home. Their service is top notch.”</p>
+        <p style="font-weight: 600; margin: 0;">— Ray D., Cheshire CT</p>
       </div>
     </section>
 
