--- a/north-haven-ct-house-cleaning.html
+++ b/north-haven-ct-house-cleaning.html
@@ -285,18 +285,18 @@
       <h2>What North Haven Customers Say</h2>
       
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!"</p>
-        <p style="font-weight: 600; margin: 0;">— Sarah M., North Haven CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Best cleaning crew ever! Our house is always spotless and we trust them in our home even when we are not there. Highly recommend!”</p>
+        <p style="font-weight: 600; margin: 0;">— Stacey D., North Haven CT</p>
       </div>
 
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[Add your second North Haven testimonial here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [Customer Name], North Haven CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“The crew from NeatNest came through our busy home and we cannot say enough about their detailed work.”</p>
+        <p style="font-weight: 600; margin: 0;">— Melissa M., North Haven CT</p>
       </div>
 
       <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"[Add your third North Haven testimonial here]"</p>
-        <p style="font-weight: 600; margin: 0;">— [Customer Name], North Haven CT</p>
+        <p style="font-style: italic; margin-bottom: 10px;">“Lucia and Mike have been flexible and professional. I trust them in our home and highly recommend them.”</p>
+        <p style="font-weight: 600; margin: 0;">— Jim H., North Haven CT</p>
       </div>
     </section>
 
