--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -183,21 +183,21 @@
         
         <!-- Benefit 1 -->
         <div style="text-align: center;">
-          <img src="/images/benefit1logo.png" alt="Fresh Reset" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <img src="/images/fresh-start-icon.png" alt="Fresh Reset" style="width: 80px; height: 80px; margin-bottom: 15px;">
           <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Fresh Reset</h3>
           <p style="margin: 0; line-height: 1.6;">Perfect before holidays, events, or the start of a new season. Remove built-up grime and restore your home.</p>
         </div>
 
         <!-- Benefit 2 -->
         <div style="text-align: center;">
-          <img src="/images/benefit2logo.png" alt="Healthier Home" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <img src="/images/healthier-home-icon.png" alt="Healthier Home" style="width: 80px; height: 80px; margin-bottom: 15px;">
           <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Healthier Home</h3>
           <p style="margin: 0; line-height: 1.6;">Reduce allergens, dust, and bacteria. Deep cleaning improves air quality and creates a healthier environment.</p>
         </div>
 
         <!-- Benefit 3 -->
         <div style="text-align: center;">
-          <img src="/images/benefit3logo.png" alt="Hard to Reach Areas" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <img src="/images/hard-to-reach-icon.png" alt="Hard to Reach Areas" style="width: 80px; height: 80px; margin-bottom: 15px;">
           <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Hard to Reach Areas</h3>
           <p style="margin: 0; line-height: 1.6;">We tackle ceiling fans, vents, baseboards, and all those spots that are easy to overlook but make a big difference.</p>
         </div>
