--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -197,7 +197,7 @@
 
         <!-- Benefit 3 -->
         <div style="text-align: center;">
-          <img src="/images/hard-to-reach-icon.png" alt="Hard to Reach Areas" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <img src="/images/duster.png" alt="Hard to Reach Areas" style="width: 80px; height: 80px; margin-bottom: 15px;">
           <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Hard to Reach Areas</h3>
           <p style="margin: 0; line-height: 1.6;">We tackle ceiling fans, vents, baseboards, and all those spots that are easy to overlook but make a big difference.</p>
         </div>
